--- a/main.css
+++ b/main.css
@@ -16,3 +16,9 @@ body{
     padding: 10px;
     text-decoration: none;
 }
+
+.add{
+    color: #176b92;
+    padding: 10px;
+    text-decoration: none;
+}
